removed some content until future updates

--- a/Magical Brewery/Magical Brewery - BP/changelog.txt
+++ b/Magical Brewery/Magical Brewery - BP/changelog.txt
@@ -1,3 +1,8 @@
+v0.4
+Updated:
+    Magical Brewery is now compatible with Vibrant Visuals
+Author comment:
+-----------------------------------------------
 -----------------------------------------------
 v0.3.6
 Updated:
